--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,43 @@
     background: rgb(45, 45, 45);
     color: white;
 }
+.container{
+    margin: auto;
+    width: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+.img{
+    width: 100%;
+}
+button{
+    padding: 5px 10px;
+    margin: 1rem;
+    border-radius: 15px;
+    background: none;
+    border: 2px solid white;
+    
+    
+}
+.container2{
+    margin: auto;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.count{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.611);
+    border-radius: 50%;
+    padding: 0.5rem 0.8rem;
+    bottom: 1rem;
+    right: 1rem;
+}
+p{
+    margin: 1rem;
+}
